[gd_scene load_steps=25 format=3 uid="uid://c8xs5tiuk8csl"]

[ext_resource type="Script" uid="uid://dkn878huqsmrg" path="res://project/scripts/humanoids/humanoid_base.gd" id="1_e3xw2"]
[ext_resource type="Texture2D" uid="uid://bj1tn7or31ghj" path="res://project/assets/Characters/Shadow.png" id="1_x2all"]
[ext_resource type="Texture2D" uid="uid://byreayk5iby2y" path="res://project/assets/Characters/Hunter/SpriteSheet.png" id="2_8yvsn"]
[ext_resource type="Script" uid="uid://cb8nmj1tedwys" path="res://project/scripts/components/hurtbox_component.gd" id="3_8yvsn"]
[ext_resource type="Script" uid="uid://c0mwlx4wif2vh" path="res://project/scripts/humanoids/skin_manager.gd" id="3_x3p1x"]
[ext_resource type="Script" uid="uid://c1c4on1mymyim" path="res://project/scripts/utils/state_machine/state_machine.gd" id="4_kqmbg"]
[ext_resource type="Script" uid="uid://c6y1t1dbmj457" path="res://project/scripts/humanoids/idle_state.gd" id="5_mgefr"]
[ext_resource type="Texture2D" uid="uid://884bsfawq7m0" path="res://project/assets/Characters/Knight/SpriteSheet.png" id="5_xqs57"]
[ext_resource type="Texture2D" uid="uid://bttwc2k7mne88" path="res://project/assets/Characters/Inspector/SpriteSheet.png" id="6_a3lht"]
[ext_resource type="Script" uid="uid://cgq5xhooviis4" path="res://project/scripts/humanoids/walk_state.gd" id="6_mgefr"]
[ext_resource type="Script" uid="uid://dypjgkp7aga7e" path="res://project/scripts/humanoids/humanoid_anim_ctrl.gd" id="7_c6dlt"]
[ext_resource type="Script" uid="uid://c57fo620t84ns" path="res://project/scripts/components/movement_component.gd" id="8_wdesk"]
[ext_resource type="Texture2D" uid="uid://dh12ajp7an34k" path="res://project/assets/Characters/LionYellow/SpriteSheet.png" id="8_y1gv5"]
[ext_resource type="Script" uid="uid://8qf5fiyl4yu3" path="res://project/scripts/components/health_component.gd" id="14_a3lht"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lftxd"]
radius = 6.0

[sub_resource type="Animation" id="Animation_1h5i8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_fhn78"]
resource_name = "idle_down"
length = 0.70001
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1, 1.0625), Vector2(1, 1.125)]
}

[sub_resource type="Animation" id="Animation_fihu6"]
resource_name = "idle_side"
length = 0.70001
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1, 1.0625), Vector2(1, 1.125)]
}

[sub_resource type="Animation" id="Animation_c3jn5"]
resource_name = "idle_up"
length = 0.70001
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1, 1.0625), Vector2(1, 1.125)]
}

[sub_resource type="Animation" id="Animation_lftxd"]
resource_name = "walk_down"
length = 0.80001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 8, 12, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1, 1.0625), Vector2(1, 1.125)]
}

[sub_resource type="Animation" id="Animation_8yvsn"]
resource_name = "walk_side"
length = 0.80001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 11, 15, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1, 1.0625), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_x2all"]
resource_name = "walk_up"
length = 0.80001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 9, 13, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1, 1.0625), Vector2(1, 1.125)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c3jn5"]
_data = {
&"RESET": SubResource("Animation_1h5i8"),
&"idle_down": SubResource("Animation_fhn78"),
&"idle_side": SubResource("Animation_fihu6"),
&"idle_up": SubResource("Animation_c3jn5"),
&"walk_down": SubResource("Animation_lftxd"),
&"walk_side": SubResource("Animation_8yvsn"),
&"walk_up": SubResource("Animation_x2all")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8yvsn"]
size = Vector2(10, 12)

[node name="Humanoid" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_e3xw2")

[node name="GroundHitBox" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_lftxd")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.50980395)
position = Vector2(0, -1)
texture = ExtResource("1_x2all")

[node name="Skin" type="Sprite2D" parent="."]
texture = ExtResource("2_8yvsn")
offset = Vector2(0, -8)
hframes = 4
vframes = 7
script = ExtResource("3_x3p1x")
skins = Array[Texture2D]([ExtResource("2_8yvsn"), ExtResource("6_a3lht"), ExtResource("5_xqs57"), ExtResource("8_y1gv5")])

[node name="SkinAnimation" type="AnimationPlayer" parent="Skin"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_c3jn5")
}

[node name="AnimCtrl" type="Node" parent="." node_paths=PackedStringArray("anim_skin", "skin_sprite", "movcp")]
script = ExtResource("7_c6dlt")
anim_skin = NodePath("../Skin/SkinAnimation")
skin_sprite = NodePath("../Skin")
movcp = NodePath("../MovementComponent")

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("healthcp")]
script = ExtResource("3_8yvsn")
healthcp = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_8yvsn")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("animator")]
script = ExtResource("4_kqmbg")
animator = NodePath("../AnimCtrl")

[node name="idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("movcp")]
script = ExtResource("5_mgefr")
movcp = NodePath("../../MovementComponent")

[node name="walk" type="Node" parent="StateMachine" node_paths=PackedStringArray("movcp")]
script = ExtResource("6_mgefr")
movcp = NodePath("../../MovementComponent")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("8_wdesk")
acceleration = 2000
metadata/_custom_type_script = "uid://c57fo620t84ns"

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("14_a3lht")
metadata/_custom_type_script = "uid://8qf5fiyl4yu3"
